--- a/index.html
+++ b/index.html
@@ -15,7 +15,20 @@
 <div class="content">
     <div class="larger-item">
         <img src="img/large_image.png">
+          <div class="large-text">
+              <h1>Larger Item Heading</h1>
+
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis quis lectus at arcu egestas
+              fringilla fermentum eget ipsum.Vestibulum hendrerit dignissim nunc vel volutpat. Nulla
+              facilisi.
+
+          </div>
+        <div class="button">
+            DETAILS
+        </div>
+
     </div>
+
 </div>
 </body>
 </html>
