Save stage changes

--- a/index.html
+++ b/index.html
@@ -27,7 +27,24 @@
             DETAILS
         </div>
 
+        <div class="small-items-wrapper">
+            <div class="small-item">
+                <img src="img/small.png">
+                <h1>Small Item</h1>
+                Lorem ipsum dolor sit amet, consec tetur adipiscing elit.
+            </div>
+            <div class="small-item2">
+                <img src="img/small2.png">
+                <h1>Small Item</h1>
+                Lorem ipsum dolor sit amet, consec tetur adipiscing elit.
+            </div>
+
+        </div>
+
+
     </div>
+
+</div>
 
 </div>
 </body>
