Added small items

--- a/index.html
+++ b/index.html
@@ -32,11 +32,19 @@
                 <img src="img/small.png">
                 <h1>Small Item</h1>
                 Lorem ipsum dolor sit amet, consec tetur adipiscing elit.
+                <br>
+                <div class="button">
+                    DETAILS
+                </div>
             </div>
-            <div class="small-item2">
+            <div class="small-item">
                 <img src="img/small2.png">
                 <h1>Small Item</h1>
                 Lorem ipsum dolor sit amet, consec tetur adipiscing elit.
+                <br>
+                <div class="button">
+                    DETAILS
+                </div>
             </div>
 
         </div>
