Added new block - "Ad Space"

--- a/index.html
+++ b/index.html
@@ -48,7 +48,12 @@
             </div>
 
         </div>
+        <div class="add-space">
+            <img src="img/ad1.png">
+            <img src="img/ad1.png">
+            <img src="img/ad1.png">
 
+        </div>
 
     </div>
 
