--- a/index.html
+++ b/index.html
@@ -54,6 +54,26 @@
             <img src="img/ad1.png">
 
         </div>
+        <div class="blog-post">
+            <div class="blog-one">
+                <h1>Blog Post Title One</h1>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                Duis quis lectus at arcu egestas fringilla fermentum eget ipsum.
+                Vestibulum hendrerit dignissim nunc vel volutpat. Nulla facilisi.
+                <div class="button">
+                    DETAILS
+                </div>
+            </div>
+            <div class="blog-one">
+                <h1>Blog Post Title Two</h1>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                Duis quis lectus at arcu egestas fringilla fermentum eget ipsum.
+                Vestibulum hendrerit dignissim nunc vel volutpat. Nulla facilisi.
+                <div class="button">
+                    DETAILS
+                </div>
+            </div>
+        </div>
 
     </div>
 
