Added logo and change botton

--- a/index.html
+++ b/index.html
@@ -9,13 +9,16 @@
 
 <div class="header">
     <div class="content-header">
-
+        <div class="logo-head">
+            <img src="img/logo.png">
+            <img src="img/Gusto.png">
+        </div>
     </div>
 </div>
 <div class="content">
     <div class="larger-item">
         <img src="img/large_image.png">
-        <h1>Larger Item Heading</h1>
+        <h1>LARGER ITEM HEADING</h1>
         <div class="large-text">
 
             Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis quis lectus at arcu egestas
@@ -30,7 +33,7 @@
         <div class="small-items-wrapper">
             <div class="small-item">
                 <img src="img/small.png">
-                <h1>Small Item</h1>
+                <h1>SMALL ITEM</h1>
                 Lorem ipsum dolor sit amet, consec tetur adipiscing elit.
                 <br>
                 <div class="button">
@@ -39,7 +42,7 @@
             </div>
             <div class="small-item">
                 <img src="img/small2.png">
-                <h1>Small Item</h1>
+                <h1>SMALL ITEM</h1>
                 Lorem ipsum dolor sit amet, consec tetur adipiscing elit.
                 <br>
                 <div class="button">
@@ -56,19 +59,21 @@
         </div>
         <div class="blog-post">
             <div class="blog-one">
-                <h1>Blog Post Title One</h1>
+                <h1>BLOG POST TITLE ONE</h1>
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit.
                 Duis quis lectus at arcu egestas fringilla fermentum eget ipsum.
                 Vestibulum hendrerit dignissim nunc vel volutpat. Nulla facilisi.
+                <br>
                 <div class="button">
                     DETAILS
                 </div>
             </div>
             <div class="blog-one">
-                <h1>Blog Post Title Two</h1>
+                <h1>BLOG POST TITLE TWO</h1>
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit.
                 Duis quis lectus at arcu egestas fringilla fermentum eget ipsum.
                 Vestibulum hendrerit dignissim nunc vel volutpat. Nulla facilisi.
+                <br>
                 <div class="button">
                     DETAILS
                 </div>
@@ -76,7 +81,12 @@
         </div>
 
     </div>
-
+    <div class="stay-connected">
+        <br>
+        <h1>STAY CONNECTED<h1>
+    </div>
+</div>
+<div class="last-block">
 </div>
 
 </div>
