Html for footer complited. Next day for cosmetic changes and add fonts

--- a/index.html
+++ b/index.html
@@ -81,13 +81,42 @@
         </div>
 
     </div>
-    <div class="stay-connected">
-        <br>
-        <h1>STAY CONNECTED<h1>
-    </div>
+
 </div>
 <div class="last-block">
-</div>
+    <div class="footer-wrapper">
+        <div class="stay-connected">
+            <br>
+            <h1>STAY CONNECTED</h1>
+        </div>
+        <div class="footer">
+            <div class="rick">
+                <div class="morty">
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                    Sed commodo est id nulla luctus, quis posuere metus elementum.
+                    Phasellus elementum tortor nec massa pellentesque lobortis.
+                </div>
+                <div class="summer">
+                    <a href="#">> Quick Link One</a>
+                    <a href="#">> Quick Link Two</a>
+                    <a href="#">> Quick Link Three</a>
+                    <a href="#">> Quick Link Four</a>
+                </div>
+
+                <div class="poloska">
+
+                </div>
+
+            </div>
+            <div class="hui">
+                Copyright 2013 Gusto. All Rights Reserved.
+            </div>
+            <div class="hui2">
+                View Online  |  Unsubscribe
+
+            </div>
+        </div>
+    </div>
 
 </div>
 </body>
