Added fonts Design changed in line with psd-layout

--- a/index.html
+++ b/index.html
@@ -2,17 +2,23 @@
 <html>
 <head>
     <link rel="stylesheet" type="text/css" href="main.css">
+    <link rel="stylesheet" type="text/css" href="css/font.css">
     <meta charset="UTF-8">
     <title>Title</title>
 </head>
 <body>
 
+
 <div class="header">
     <div class="content-header">
+        <div class="something">
+            <span class="colortext">Having Trouble Viewing it?</span> View Online.
+        </div>
         <div class="logo-head">
             <img src="img/logo.png">
             <img src="img/Gusto.png">
         </div>
+
     </div>
 </div>
 <div class="content">
@@ -29,7 +35,9 @@
         <div class="button">
             DETAILS
         </div>
+        <div class="poloska2">
 
+        </div>
         <div class="small-items-wrapper">
             <div class="small-item">
                 <img src="img/small.png">
@@ -39,6 +47,7 @@
                 <div class="button">
                     DETAILS
                 </div>
+
             </div>
             <div class="small-item">
                 <img src="img/small2.png">
@@ -51,10 +60,17 @@
             </div>
 
         </div>
+        <div class="poloska2">
+
+        </div>
+
         <div class="add-space">
             <img src="img/ad1.png">
             <img src="img/ad1.png">
             <img src="img/ad1.png">
+
+        </div>
+        <div class="poloska2">
 
         </div>
         <div class="blog-post">
@@ -68,6 +84,9 @@
                     DETAILS
                 </div>
             </div>
+            <div class="poloska2">
+
+            </div>
             <div class="blog-one">
                 <h1>BLOG POST TITLE TWO</h1>
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit.
@@ -78,6 +97,7 @@
                     DETAILS
                 </div>
             </div>
+
         </div>
 
     </div>
@@ -109,7 +129,7 @@
 
             </div>
             <div class="hui">
-                Copyright 2013 Gusto. All Rights Reserved.
+                Copyright 2013 <span class="colortext">Gusto.   </span>All Rights Reserved.
             </div>
             <div class="hui2">
                 View Online  |  Unsubscribe
