Changes for mobile with @media

--- a/index.html
+++ b/index.html
@@ -31,10 +31,14 @@
             fringilla fermentum eget ipsum.Vestibulum hendrerit dignissim nunc vel volutpat. Nulla
             facilisi.
 
+
         </div>
+
         <div class="button">
             DETAILS
         </div>
+        </div>
+
         <div class="poloska2">
 
         </div>
@@ -87,7 +91,7 @@
             <div class="poloska2">
 
             </div>
-            <div class="blog-one">
+            <div class="blog-one2">
                 <h1>BLOG POST TITLE TWO</h1>
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit.
                 Duis quis lectus at arcu egestas fringilla fermentum eget ipsum.
