--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <meta name="viewport" content="width=device-width">
     <link rel="stylesheet" type="text/css" href="main.css">
     <link rel="stylesheet" type="text/css" href="css/font.css">
     <meta charset="UTF-8">
@@ -15,15 +16,15 @@
             <span class="colortext">Having Trouble Viewing it?</span> View Online.
         </div>
         <div class="logo-head">
-            <img src="img/logo.png">
-            <img src="img/Gusto.png">
+           <img src="img/logo.png">
+           <img src="img/Gusto.png">
         </div>
 
     </div>
 </div>
 <div class="content">
     <div class="larger-item">
-        <img src="img/large_image.png">
+         <img src="img/large_image.png">
         <h1>LARGER ITEM HEADING</h1>
         <div class="large-text">
 
@@ -44,7 +45,7 @@
         </div>
         <div class="small-items-wrapper">
             <div class="small-item">
-                <img src="img/small.png">
+                     <img src="img/small.png">
                 <h1>SMALL ITEM</h1>
                 Lorem ipsum dolor sit amet, consec tetur adipiscing elit.
                 <br>
@@ -54,7 +55,7 @@
 
             </div>
             <div class="small-item">
-                <img src="img/small2.png">
+                 <img src="img/small2.png">
                 <h1>SMALL ITEM</h1>
                 Lorem ipsum dolor sit amet, consec tetur adipiscing elit.
                 <br>
@@ -69,11 +70,12 @@
         </div>
 
         <div class="add-space">
-            <img src="img/ad1.png">
-            <img src="img/ad1.png">
-            <img src="img/ad1.png">
+            <div> <img src="img/ad1.png"></div>
+                 <div><img src="img/ad1.png"></div>
+                  <div> <img src="img/ad1.png"> </div>
 
-        </div>
+
+                  </div>
         <div class="poloska2">
 
         </div>
