Changed way to display logo on mobile devices

--- a/index.html
+++ b/index.html
@@ -12,37 +12,32 @@
 
 <div class="header">
     <div class="content-header">
+        <div class="logo-head">
+          <span><img class="fullscreen-image" src="img/logo.png"></span>
+          <span><img class="fullscreen-image" src="img/Gusto.png"></span>
+        </div>
         <div class="something">
             <span class="colortext">Having Trouble Viewing it?</span> View Online.
         </div>
-        <div class="logo-head">
-           <img src="img/logo.png">
-           <img src="img/Gusto.png">
-        </div>
-
     </div>
 </div>
 <div class="content">
     <div class="larger-item">
-         <img src="img/large_image.png">
+       <div>
+           <img class="fullscreen-image" src="img/large_image.png">
+       </div>
         <h1>LARGER ITEM HEADING</h1>
         <div class="large-text">
-
             Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis quis lectus at arcu egestas
             fringilla fermentum eget ipsum.Vestibulum hendrerit dignissim nunc vel volutpat. Nulla
             facilisi.
-
-
         </div>
-
         <div class="button">
             DETAILS
         </div>
-        </div>
+    </div>
 
-        <div class="poloska2">
-
-        </div>
+    <div class="poloska2"></div>
         <div class="small-items-wrapper">
             <div class="small-item">
                      <img src="img/small.png">
@@ -52,7 +47,6 @@
                 <div class="button">
                     DETAILS
                 </div>
-
             </div>
             <div class="small-item">
                  <img src="img/small2.png">
@@ -63,8 +57,8 @@
                     DETAILS
                 </div>
             </div>
-
         </div>
+
         <div class="poloska2">
 
         </div>
@@ -103,9 +97,7 @@
                     DETAILS
                 </div>
             </div>
-
         </div>
-
     </div>
 
 </div>
